--- a/templates/about.html
+++ b/templates/about.html
@@ -1,14 +1,12 @@
-{% extends 'base.html' %}
+{% extends 'site_base.html' %}
 
 {% block title %} {{ flatpage.title }}{% endblock %}
 
-{% block content %}
-        <div class="entry">
-            <div class="head-line">we are about fart lyfe</div>
-            <div class="entry-main">
-                <div class="entry-body">
-                    {{ flatpage.content|safe }}
-                </div>
+{% block main %}
+        <div class="col-md-6 col-md-offset-3">
+            <h3>we are about fart lyfe</h3>
+            <div class="entry-body">
+                {{ flatpage.content|safe }}
             </div>
         </div>
 {% endblock %}
