--- a/templates/feeds/post_list_page.html
+++ b/templates/feeds/post_list_page.html
@@ -17,7 +17,7 @@
                             <img src="{{ photo.get_blog_post_url }}">
                         </div>{% endfor %}
                     </div>{% endif %}
-                    <div class="author-name">–– {% for author in post.feed.authors.all %}{{ author.get_full_name }} {% endfor %}; {{ post.pub_date|date:"N j, Y" }}</div>
+                    <div class="author-name pull-right">–– {% for author in post.feed.authors.all %}{{ author.get_full_name }} {% endfor %}; {{ post.pub_date|date:"N j, Y" }}</div>
                     <div id="tags"><a href="{% url 'all_tags' %}">Tag{{ entry.tags|pluralize }}</a> : {% for tag in entry.tag.all %}<a href="{{ tag.get_absolute_url }}">{{ tag.title }}  </a>{% endfor %}</div>
                     <div id="page-link"><a href="{{ entry.get_absolute_url }}#disqus_thread">Comment</a></div>
                 </div>
