--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -1,6 +1,8 @@
 {% extends 'site_base.html' %}
 
-{% block header %}{% endblock %}
+{% block header %}
+    <h5><a class="pull-right" href="{% url 'cart' %}">cart</a></h5>
+{% endblock %}
 
 {% block main %}
     {% block body %}
