--- a/templates/shop/front_page.html
+++ b/templates/shop/front_page.html
@@ -3,5 +3,5 @@
 
         {% lazy_paginate object_list %}
         {% for category in object_list %}
-            {% item_list list=category.products.all parent=category number=4 %}
+            {% item_list list=category.products.all parent=category number=category.products.all|length %}
         {% endfor %}
