--- a/fartlyfe/static/css/main.css
+++ b/fartlyfe/static/css/main.css
@@ -24,6 +24,11 @@ header h1 {
     text-align:center;
 }
 
+#logo img {
+    margin-left:-12%;
+    width:124%;
+}
+
 #logo>img:hover {
     opacity:.5;
 }
@@ -39,6 +44,7 @@ a:hover {
 
 img {
     width:100%;
+    height:auto;
 }
 
 .row {
@@ -156,11 +162,17 @@ img {
     text-align:right;
 }
 
+.right-side {
+    text-align:right;
+}
+
 .post-body img {
     width:100%;
+    height:auto;
 }
 
 audio {
+    width:100%;
     height:50px;
     }
 
