--- a/templates/feeds/feed_list_page.html
+++ b/templates/feeds/feed_list_page.html
@@ -5,3 +5,4 @@
         {% for feed in object_list %}
             {% item_list list=feed.post_set.all parent=feed number=4 %}
         {% endfor %}
+        {% show_more %}
