--- a/templates/feeds/post_archive_month.html
+++ b/templates/feeds/post_archive_month.html
@@ -7,17 +7,17 @@
                     {% if feed.cover %}
                         <img src="{{ feed.cover.get_header_url }}">
                     {% else %}
-                        <h1 class="page-top col-xs-offset-8 col-xs-4">{{ feed.title }}</h1>
+                        <h1 class="page-top">{{ feed.title }}</h1>
                     {% endif %}
                     <a href="{% url 'archive_top' slug=feed.slug %}">
-                        <h4 class="pull-right">Full Archive</h4>
+                        <h4 class="right-side">Full Archive</h4>
                     </a>
 {% endblock %}
 
 
 
 {% block center_content %}{{ block.super}}
-        <h3>{% if previous_month %}<a href="{% url 'month_posts' slug=feed.slug year=previous_month|date:"Y" month=previous_month|date:"b" %}"><< {{ previous_month|date:"F Y" }}</a> |{% endif %} {{ month|date:"F Y"}} {% if next_month %}| <a href="{% url 'month_posts' slug=feed.slug year=next_month|date:"Y" month=next_month|date:"b" %}">{{ next_month|date:"F Y" }} >></a>{% endif %}</h3>
+        <h3>{% if previous_month %}<a href="{% url 'month_posts' slug=feed.slug year=previous_month|date:"Y" month=previous_month|date:"b" %}"><< {{ previous_month|date:"N Y" }}</a> |{% endif %} {{ month|date:"N Y"}} {% if next_month %}| <a href="{% url 'month_posts' slug=feed.slug year=next_month|date:"Y" month=next_month|date:"b" %}">{{ next_month|date:"N Y" }} >></a>{% endif %}</h3>
         
         {% load fart_tags %}    
         {% for item in object_list %}
