Fixed error page, for now

--- a/templates/error.html
+++ b/templates/error.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'site_base.html' %}
 
-{% block content %}
+{% block main %}
     <div id="error">
         <img src="/media/images/logos/error-white.png">
     </div>
